test_suite/tests/ui/precondition/deserialize_dst.stderr
error: cannot deserialize a dynamically sized struct
 --> tests/ui/precondition/deserialize_dst.rs:4:1
  |
3 |   #[derive(Deserialize)]
  |            ----------- in this derive macro expansion
4 | / struct S {
5 | |     string: String,
6 | |     slice: [u8],
7 | | }
  | |_^
  |
  = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
